/*
 * Copyright (c) 2019 Toast Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package protokt;

import "google/protobuf/descriptor.proto";

option java_package = "com.toasttab.protokt.ext";

message ProtoktFileOptions {
  string kotlin_package = 1;
}

// Kotlin-specific options for files
extend google.protobuf.FileOptions {
  ProtoktFileOptions file = 1072;
}

message ProtoktMessageOptions {
  // Declares that the message class implements an interface
  string implements = 1;

  // Provides a message for deprecation
  string deprecation_message = 2;
}

// Kotlin-specific options for generated message classes
extend google.protobuf.MessageOptions {
  ProtoktMessageOptions class = 1072;
}

message ProtoktFieldOptions {
  // makes a message-type field not nullable in Kotlin code
  // beware that deserialization will NPE if the field is missing from the protobuf payload
  bool non_null = 1;

  // Use a wrapper data class instead of a raw protobuf type.
  //
  // For example:
  //
  // message Foo {
  //   string id = 1 [(protokt.property).wrap = "FooId"];
  // }
  //
  // data class FooId(val value: String)
  //
  // will yield:
  // data class Foo(val id: FooId) ...
  //
  // For external types such as java.util.Date:
  //
  // message Foo {
  //   int64 timestamp = 1 [(protokt.property).wrap = "java.util.Date"];
  // }
  //
  // will yield:
  // data class Foo(val timestamp: java.util.Date) ...
  string wrap = 2;

  // Maps a bytes field to BytesSlice. If being deserialized from a byte array,
  // BytesSlice will point to the source array without copying the subarray.
  bool bytes_slice = 3;

  // Provides a message for deprecation
  string deprecation_message = 4;
}

// Kotlin-specific options for the properties of generated message classes
extend google.protobuf.FieldOptions {
  ProtoktFieldOptions property = 1072;
}

message ProtoktOneofOptions {
  // For example:
  //
  // message Message {
  //   oneof some_field_name {
  //     option (protokt.oneof).non_null = true;
  //     string id = 1;
  //   }
  // }
  //
  bool non_null = 1;

  // Make the sealed class implement an interface, enforcing the presence of a
  // property in each possible variant
  string implements = 2;

  // Provides a message for deprecation
  string deprecation_message = 3;
}

// Kotlin-specific options for the properties of generated Oneof classes
extend google.protobuf.OneofOptions {
  ProtoktOneofOptions oneof = 1072;
}

message ProtoktEnumOptions {
  // Provides a message for deprecation
  string deprecation_message = 1;
}

extend google.protobuf.EnumOptions {
  ProtoktEnumOptions enum = 1072;
}

message ProtoktEnumValueOptions {
 // Provides a message for deprecation
  string deprecation_message = 1;
}

extend google.protobuf.EnumValueOptions {
  ProtoktEnumValueOptions enum_value = 1072;
}
